--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
         <title>KAY VALIDER</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-        <base href="/">
+        <base href="/valider/">
     </head>
     <body>
         <div id = "barre">
