--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <div ng-view></div>
 
-        <script src="../ANGULAR/angular-1.7.2/angular.min.js"></script>
-        <script src="../ANGULAR/angular-1.7.2/angular-route.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-route.min.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
